@@ -1,6 +1,11 @@
 2007-06-05  Ross Burton  <ross@openedhand.com>
 
 	* configure.in:
+	Bump glib requirement to 2.13, for the ~second-accurate timers.
+
+2007-06-05  Ross Burton  <ross@openedhand.com>
+
+	* configure.in:
 	Call pkgconfig specifically for the typing break applet.
 
 2007-06-04  Rodrigo Moya <rodrigo@gnome-db.org>
